--- a/views/list.ejs
+++ b/views/list.ejs
@@ -7,10 +7,16 @@
     <title>To Do List</title>
   </head>
   <body>
-    <% if (kindOfDay == "Saturday" || kindOfDay == "Sunday") { %>
-    <h1 style="color: purple"><%= kindOfDay %> List</h1>
-    <% } else { %>
-    <h1 style="color: blue"><%= kindOfDay %> List</h1>
-    <% } %>
+    <h1><%= kindOfDay %></h1>
+    <ul>
+      <% for (var i = 0; i < newListItems.length; i++){ %>
+        <li><%= newListItems[i] %> </li>
+      <% } %>
+    </ul>
+
+    <form class="" action="/" method="post">
+      <input type="text" name="newItem" />
+      <button type="submit" name="button">Add</button>
+    </form>
   </body>
 </html>
