--- a/views/list.ejs
+++ b/views/list.ejs
@@ -5,18 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>To Do List</title>
+    <link rel="stylesheet" href="CSS/styles.css">
   </head>
   <body>
-    <h1><%= kindOfDay %></h1>
-    <ul>
-      <% for (var i = 0; i < newListItems.length; i++){ %>
-        <li><%= newListItems[i] %> </li>
-      <% } %>
-    </ul>
+    <div class="box" id="heading">
+      <h1><%= kindOfDay %></h1>
+    </div>
 
-    <form class="" action="/" method="post">
-      <input type="text" name="newItem" />
-      <button type="submit" name="button">Add</button>
-    </form>
+    <div class="box">
+        <% for (var i = 0; i < newListItems.length; i++){ %>
+          <div class="item">
+            <input type="checkbox">
+            <p><%= newListItems[i] %> </p>
+          </div>
+
+
+        <% } %>
+        <form class="item" action="/" method="post">
+          <input type="text" name="newItem" placeholder="New Item" autocomplete="off"/>
+          <button type="submit" name="button">+</button>
+        </form>
+    </div>
+
+
   </body>
 </html>
