--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,13 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>To Do List</title>
-    <link rel="stylesheet" href="CSS/styles.css">
-  </head>
-  <body>
+<%- include("header") -%>
+
     <div class="box" id="heading">
       <h1><%= listTitle %></h1>
     </div>
@@ -27,8 +19,6 @@
         </form>
     </div>
 
-    <footer>Copyright 2018 Blah blah blah</footer>
+    <%- include("footer") -%>    
+    
 
-
-  </body>
-</html>
